# k8sbackup-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  Containerfile  LICENSE.txt  README.md
.cargo/: config.toml
.github/workflows/: clippy.yml  docker-publish.yml  rustfmt.yml  test.yml
kubernetes/: cronjob.yaml  kustomization.yaml  namespace.yaml  rbac.yaml
src/: main.rs
