[package]
name = "k8sbackup-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
k8s-openapi = { version = "0.28", features = ["latest"] }
kube = { version = "4", features = ["client", "derive", "rustls-tls"] }
serde_json = "1"
serde_yaml = "0.9"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[lints.rust]
#missing-docs = "warn"
missing-debug-implementations = "warn"
rust-2018-idioms = "warn"
unsafe-code = "forbid"
unused-lifetimes = "warn"

[lints.clippy]
allow-attributes = "warn"
allow-attributes-without-reason = "warn"
dbg-macro = "warn"
pedantic = { level = "warn", priority = -1 }
todo = "warn"
unwrap-used = "warn"
missing-panics-doc = "allow"
missing-errors-doc = "allow"

[profile.deploy]
inherits = "release"
lto = true
codegen-units = 1
panic = "abort"
